// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`alarm-general-list Renders \`alarm-general-list\` with alarms 1`] = `
<c-collapse-panel-stub
  class="c-alternative-bg-panel"
  expanded=""
>
  <div
    class="v-data-table v-data-table--has-bottom theme--light"
  >
    <div
      class="v-data-table__wrapper"
    >
      <table>
        <colgroup>
          <col
            class=""
          />
          <col
            class=""
          />
          <col
            class=""
          />
          <col
            class=""
          />
        </colgroup>
        <thead
          class="v-data-table-header"
        >
          <tr>
            <th
              aria-label="Author"
              class="text-start"
              data-value="v.state.a"
              role="columnheader"
              scope="col"
            >
              <div
                class="layout align-center"
              >
                <span
                  class=""
                >
                  Author
                </span>
              </div>
            </th>
            <th
              aria-label="Connector"
              class="text-start"
              data-value="v.connector"
              role="columnheader"
              scope="col"
            >
              <div
                class="layout align-center"
              >
                <span
                  class=""
                >
                  Connector
                </span>
              </div>
            </th>
            <th
              aria-label="Component"
              class="text-start"
              data-value="v.component"
              role="columnheader"
              scope="col"
            >
              <div
                class="layout align-center"
              >
                <span
                  class=""
                >
                  Component
                </span>
              </div>
            </th>
            <th
              aria-label="Resource"
              class="text-start"
              data-value="v.resource"
              role="columnheader"
              scope="col"
            >
              <div
                class="layout align-center"
              >
                <span
                  class=""
                >
                  Resource
                </span>
              </div>
            </th>
          </tr>
        </thead>
        <tbody>
          <tr
            class=""
          >
            <td
              class="text-start"
            >
              author-0
            </td>
            <td
              class="text-start"
            >
              connector-0
            </td>
            <td
              class="text-start"
            >
              component-0
            </td>
            <td
              class="text-start"
            >
              resource-0
            </td>
          </tr>
          <tr
            class=""
          >
            <td
              class="text-start"
            >
              author-1
            </td>
            <td
              class="text-start"
            >
              connector-1
            </td>
            <td
              class="text-start"
            >
              component-1
            </td>
            <td
              class="text-start"
            >
              resource-1
            </td>
          </tr>
          <tr
            class=""
          >
            <td
              class="text-start"
            >
              author-2
            </td>
            <td
              class="text-start"
            >
              connector-2
            </td>
            <td
              class="text-start"
            >
              component-2
            </td>
            <td
              class="text-start"
            >
              resource-2
            </td>
          </tr>
          <tr
            class=""
          >
            <td
              class="text-start"
            >
              author-3
            </td>
            <td
              class="text-start"
            >
              connector-3
            </td>
            <td
              class="text-start"
            >
              component-3
            </td>
            <td
              class="text-start"
            >
              resource-3
            </td>
          </tr>
        </tbody>
      </table>
    </div>
    <div
      class="v-data-footer"
    >
      <div
        class="v-data-footer__select"
      >
        Rows per page:
        <div
          class="v-input v-input--hide-details v-input--is-label-active v-input--is-dirty theme--light v-text-field v-select"
        >
          <div
            class="v-input__control"
          >
            <div
              aria-expanded="false"
              aria-haspopup="listbox"
              class="v-input__slot"
              role="button"
            >
              <div
                class="v-select__slot"
              >
                <div
                  class="v-select__selections"
                >
                  <div
                    class="v-select__selection v-select__selection--comma"
                  >
                    10
                  </div>
                  <input
                    aria-label="Rows per page:"
                    aria-readonly="false"
                    autocomplete="off"
                    readonly="readonly"
                    type="text"
                  />
                </div>
                <div
                  class="v-input__append-inner"
                >
                  <div
                    class="v-input__icon v-input__icon--append"
                  >
                    <i
                      aria-hidden="true"
                      class="v-icon notranslate material-icons theme--light"
                    >
                      arrow_drop_down
                    </i>
                  </div>
                </div>
                <input
                  type="hidden"
                  value="10"
                />
              </div>
              <div
                class="v-menu"
              >
                <!---->
              </div>
            </div>
          </div>
        </div>
      </div>
      <div
        class="v-data-footer__pagination"
      >
        1-4 of 4
      </div>
      <div
        class="v-data-footer__icons-before"
      >
        <button
          aria-label="Previous page"
          class="v-btn v-btn--disabled v-btn--icon v-btn--round v-btn--text theme--light v-size--default"
          disabled="disabled"
          type="button"
        >
          <span
            class="v-btn__content"
          >
            <i
              aria-hidden="true"
              class="v-icon notranslate material-icons theme--light"
            >
              chevron_left
            </i>
          </span>
        </button>
      </div>
      <div
        class="v-data-footer__icons-after"
      >
        <button
          aria-label="Next page"
          class="v-btn v-btn--disabled v-btn--icon v-btn--round v-btn--text theme--light v-size--default"
          disabled="disabled"
          type="button"
        >
          <span
            class="v-btn__content"
          >
            <i
              aria-hidden="true"
              class="v-icon notranslate material-icons theme--light"
            >
              chevron_right
            </i>
          </span>
        </button>
      </div>
    </div>
  </div>
</c-collapse-panel-stub>
`;

exports[`alarm-general-list Renders \`alarm-general-list\` with empty items 1`] = `
<c-collapse-panel-stub
  class="c-alternative-bg-panel"
  expanded=""
>
  <div
    class="v-data-table v-data-table--has-bottom theme--light"
  >
    <div
      class="v-data-table__wrapper"
    >
      <table>
        <colgroup>
          <col
            class=""
          />
          <col
            class=""
          />
          <col
            class=""
          />
          <col
            class=""
          />
        </colgroup>
        <thead
          class="v-data-table-header"
        >
          <tr>
            <th
              aria-label="Author"
              class="text-start"
              data-value="v.state.a"
              role="columnheader"
              scope="col"
            >
              <div
                class="layout align-center"
              >
                <span
                  class=""
                >
                  Author
                </span>
              </div>
            </th>
            <th
              aria-label="Connector"
              class="text-start"
              data-value="v.connector"
              role="columnheader"
              scope="col"
            >
              <div
                class="layout align-center"
              >
                <span
                  class=""
                >
                  Connector
                </span>
              </div>
            </th>
            <th
              aria-label="Component"
              class="text-start"
              data-value="v.component"
              role="columnheader"
              scope="col"
            >
              <div
                class="layout align-center"
              >
                <span
                  class=""
                >
                  Component
                </span>
              </div>
            </th>
            <th
              aria-label="Resource"
              class="text-start"
              data-value="v.resource"
              role="columnheader"
              scope="col"
            >
              <div
                class="layout align-center"
              >
                <span
                  class=""
                >
                  Resource
                </span>
              </div>
            </th>
          </tr>
        </thead>
        <tbody>
          <tr
            class="v-data-table__empty-wrapper"
          >
            <td
              colspan="4"
            >
              No data available
            </td>
          </tr>
        </tbody>
      </table>
    </div>
    <div
      class="v-data-footer"
    >
      <div
        class="v-data-footer__select"
      >
        Rows per page:
        <div
          class="v-input v-input--hide-details v-input--is-label-active v-input--is-dirty theme--light v-text-field v-select"
        >
          <div
            class="v-input__control"
          >
            <div
              aria-expanded="false"
              aria-haspopup="listbox"
              class="v-input__slot"
              role="button"
            >
              <div
                class="v-select__slot"
              >
                <div
                  class="v-select__selections"
                >
                  <div
                    class="v-select__selection v-select__selection--comma"
                  >
                    10
                  </div>
                  <input
                    aria-label="Rows per page:"
                    aria-readonly="false"
                    autocomplete="off"
                    readonly="readonly"
                    type="text"
                  />
                </div>
                <div
                  class="v-input__append-inner"
                >
                  <div
                    class="v-input__icon v-input__icon--append"
                  >
                    <i
                      aria-hidden="true"
                      class="v-icon notranslate material-icons theme--light"
                    >
                      arrow_drop_down
                    </i>
                  </div>
                </div>
                <input
                  type="hidden"
                  value="10"
                />
              </div>
              <div
                class="v-menu"
              >
                <!---->
              </div>
            </div>
          </div>
        </div>
      </div>
      <div
        class="v-data-footer__pagination"
      >
        –
      </div>
      <div
        class="v-data-footer__icons-before"
      >
        <button
          aria-label="Previous page"
          class="v-btn v-btn--disabled v-btn--icon v-btn--round v-btn--text theme--light v-size--default"
          disabled="disabled"
          type="button"
        >
          <span
            class="v-btn__content"
          >
            <i
              aria-hidden="true"
              class="v-icon notranslate material-icons theme--light"
            >
              chevron_left
            </i>
          </span>
        </button>
      </div>
      <div
        class="v-data-footer__icons-after"
      >
        <button
          aria-label="Next page"
          class="v-btn v-btn--disabled v-btn--icon v-btn--round v-btn--text theme--light v-size--default"
          disabled="disabled"
          type="button"
        >
          <span
            class="v-btn__content"
          >
            <i
              aria-hidden="true"
              class="v-icon notranslate material-icons theme--light"
            >
              chevron_right
            </i>
          </span>
        </button>
      </div>
    </div>
  </div>
</c-collapse-panel-stub>
`;
